Fix placement of logo on iOS

--- a/server/static/css/photo.css
+++ b/server/static/css/photo.css
@@ -100,6 +100,11 @@
   #sidebar-wrapper {
     display: none;
   }
+
+  .photo-wrapper img {
+    width: 100%;
+    max-width: 100%;
+  }
 }
 
 @media (min-width: 1100px) {
